# Headcount_Time_Series_Approximater

./: .cursorrules  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
.codex/: config.toml
.cursor/rules/: 00-project.md  01-architecture.md  02-sources.md  03-estimation.md  04-testing.md  05-review.md
apps/api/: main.py
apps/review_ui/: api_client.py  app.py  components.py  config.py
data/: manual_anchors.example.yaml
data/exports/: company_growth.csv
docs/: ACCEPTANCE_CRITERIA_V2.md  BUILD_PLAN_V2.md  EVALUATION_V1.md  HARMONIC_COHORT_LIVE_RUN.md  LINKEDIN_BOT_WALL_STRATEGY.md  METHODOLOGY_AND_ASSUMPTIONS_V2.md  SOURCE_MATRIX_V2.md
migrations/: env.py
migrations/versions/: 20260420_1708_phase_1_initial_schema.py  20260420_1717_phase_2_benchmark_tables.py  20260420_1902_phase_8_confidence_columns.py  20260420_1945_phase_10_5_interpolated_method.py  20260420_2100_phase_11_evaluation_run.py  (+6 more)
plans/: PLANS.md
prompts/: codex_exec_prompt_v2.md  codex_plan_mode_bootstrap_v2.md  cursor_exec_prompt_v2.md  cursor_plan_mode_bootstrap_v2.md
scripts/: _collect_and_estimate_specific.py  _collect_wayback_anchors.py  _dump_li_jsonld.py  _harmonic_amend_eval.py  _harmonic_regen_percompany.py  _inspect_bing_snippet.py  _inspect_estimates.py  _inspect_li_cache.py  _inspect_signals.py  _pc_breakdown.py  _peek_resolver.py  _peek_xlsx.py  _per_company_summary.py  _pragma.py  _probe_bing_body.py  _probe_serp_snippet.py  _reestimate_cohort.py  _retry_declined_slugs.py  backfill_linkedin_resolved_urls_from_logs.py  collect_linkedin_missing_current.py  consolidate_legitimate_observations.py  export_company_growth_csv.py  merge_orphan_run_dbs.py  regenerate_goldens.py  reparse_raw_responses.py  run_harmonic_cohort_live.py
test_source/: High Priority Companies_01.04.2026.xlsx  Sample Employee Growth for High Priority Prospects.xlsx
tests/: conftest.py
(+191 files in other folders)
